--- a/.github/workflows/DeploySurge.yml
+++ b/.github/workflows/DeploySurge.yml
@@ -38,4 +38,4 @@ jobs:
       run: npm install --global surge
 
     - name: Deploy to Surge
-      run: surge ./build reactexpensetrackerfayyaz.surge.sh --token ${{ secrets.SURGE_TOKEN }}
+      run: surge ./build Expense-tracker-app.github.io --token ${{ secrets.SURGE_TOKEN }}
